--- a/index.html
+++ b/index.html
@@ -12,11 +12,41 @@
     <title>CSS Grid</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container1">
       <div class="item item-1">1</div>
       <div class="item item-2">2</div>
       <div class="item item-3">3</div>
       <div class="item item-4">4</div>
     </div>
+
+    <div class="container2">
+      <div class="item item-1">1</div>
+      <div class="item item-2">2</div>
+      <div class="item item-3">3</div>
+      <div class="item item-4">4</div>
+    </div>
+
+    <div class="container3">
+      <div class="item item-1">1</div>
+      <div class="item item-2">2</div>
+      <div class="item item-3">3</div>
+      <div class="item item-4">4</div>
+    </div>
+ 
+    <div class="container4">
+      <div class="item item-1">1</div>
+      <div class="item item-2">2</div>
+      <div class="item item-3">3</div>
+      <div class="item item-4">4</div>
+    </div>
+
+    <div class="container5">
+      <div class="item item-1">HEADER</div>
+      <div class="item item-2">MAIN</div>
+      <div class="item item-3">SIDEBAR</div>
+      <div class="item item-4">FOOTER</div>
+    </div>
+
+
   </body>
 </html>
